test/bad/lambdas/lambda06.px

func f(g: Int->Char->Int): Void def
    return

f(_+_)
